--- a/BE/package.json
+++ b/BE/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.2",
+    "multer": "^1.4.4",
     "postman-request": "^2.88.1-postman.30",
     "validator": "^13.7.0"
   }
