--- a/anime_fe/pubspec.yaml
+++ b/anime_fe/pubspec.yaml
@@ -30,6 +30,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
   avatar_view: ^1.0.1
+  dio: ^4.0.4
+  flutter_bloc: ^8.0.0
+  image_picker: ^0.8.4+1
+  http_parser: ^4.0.0
+  firebase_core: ^1.10.6
+  firebase_storage: ^10.2.4
 
 dev_dependencies:
   flutter_test:
