--- a/anime_fe/pubspec.yaml
+++ b/anime_fe/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   avatar_view: ^1.0.1
   dio: ^4.0.4
   flutter_bloc: ^8.0.0
+  equatable: ^2.0.3
   image_picker: ^0.8.4+1
   http_parser: ^4.0.0
   firebase_core: ^1.10.6
