--- a/BE/package.json
+++ b/BE/package.json
@@ -9,13 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.2.0",
+    "graphql-tools": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.2",
     "multer": "^1.4.4",
     "postman-request": "^2.88.1-postman.30",
+    "sharp": "^0.29.3",
     "validator": "^13.7.0"
   }
 }
