--- a/anime_fe/pubspec.yaml
+++ b/anime_fe/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   http_parser: ^4.0.0
   firebase_core: ^1.10.6
   firebase_storage: ^10.2.4
+  curved_navigation_bar: ^1.0.1
+  graphql_flutter: ^5.0.0
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
